--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
 <% nav_items = [
   { path: root_path,       icon: "bell_icon",     tip: "ダッシュボード" },
+  { path: "/clients",      icon: "relation_icon", tip: "クライアント" },
   { path: "/orders",        icon: "order_icon",    tip: "オーダー" },
   { path: "/fab",     icon: "fab_icon",      tip: "生産" },
   { path: "/delivery",      icon: "delivery_icon", tip: "デリバリー" },
