--- a/app/views/passwords/_new_form.html.erb
+++ b/app/views/passwords/_new_form.html.erb
@@ -19,7 +19,7 @@
     
     <div class="flex gap-3 justify-end">
       <button type="button" data-action="click->modal#close" class="btn btn-ghost">キャンセル</button>
-      <%= form.submit "送信", class: "btn btn-primary" %>
+      <%= form.submit "送信", class: "btn btn-neutral" %>
     </div>
   <% end %>
 </turbo-frame>
