--- a/app/views/relations/index.html.erb
+++ b/app/views/relations/index.html.erb
@@ -1,7 +1,7 @@
 <div class="p-6">
   <div class="flex justify-between items-center mb-6">
     <h1 class="text-3xl font-bold text-gray-900">関係各社管理</h1>
-    <button class="btn btn-primary">新規登録</button>
+    <button class="btn btn-neutral">新規登録</button>
   </div>
 
   <!-- サマリー -->
@@ -84,7 +84,7 @@
           <input type="text" placeholder="会社名で検索" class="input input-bordered input-sm" />
         </div>
         
-        <button class="btn btn-sm btn-primary self-end">検索</button>
+        <button class="btn btn-sm btn-neutral self-end">検索</button>
       </div>
     </div>
   </div>
@@ -120,7 +120,7 @@
               <td>
                 <div class="flex space-x-1">
                   <button class="btn btn-xs btn-outline">詳細</button>
-                  <button class="btn btn-xs btn-primary">編集</button>
+                  <button class="btn btn-xs btn-neutral">編集</button>
                 </div>
               </td>
             </tr>
@@ -135,7 +135,7 @@
               <td>
                 <div class="flex space-x-1">
                   <button class="btn btn-xs btn-outline">詳細</button>
-                  <button class="btn btn-xs btn-primary">編集</button>
+                  <button class="btn btn-xs btn-neutral">編集</button>
                 </div>
               </td>
             </tr>
@@ -150,7 +150,7 @@
               <td>
                 <div class="flex space-x-1">
                   <button class="btn btn-xs btn-outline">詳細</button>
-                  <button class="btn btn-xs btn-primary">編集</button>
+                  <button class="btn btn-xs btn-neutral">編集</button>
                 </div>
               </td>
             </tr>
@@ -165,7 +165,7 @@
               <td>
                 <div class="flex space-x-1">
                   <button class="btn btn-xs btn-outline">詳細</button>
-                  <button class="btn btn-xs btn-primary">編集</button>
+                  <button class="btn btn-xs btn-neutral">編集</button>
                 </div>
               </td>
             </tr>
