--- a/app/views/user_activations/new.html.erb
+++ b/app/views/user_activations/new.html.erb
@@ -64,7 +64,7 @@
             <% end %>
           </div>
           
-          <%= form.submit "アカウント作成", class: "btn btn-primary w-full" %>
+          <%= form.submit "アカウント作成", class: "btn btn-neutral w-full" %>
         </div>
       </fieldset>
     <% end %>
