--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -8,9 +8,9 @@
     <table class="table table-zebra w-full">
       <thead>
         <tr class="bg-gray-50">
-          <th class="font-semibold text-gray-900">オーダー番号</th>
+          <th class="font-semibold text-gray-900">品番</th>
           <th class="font-semibold text-gray-900">クライアント</th>
-          <th class="font-semibold text-gray-900">製品名</th>
+          <th class="font-semibold text-gray-900">品名</th>
           <th class="font-semibold text-gray-900">数量</th>
           <th class="font-semibold text-gray-900">注文日</th>
           <th class="font-semibold text-gray-900">ETD</th>
