--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -33,8 +33,8 @@
             <td><%= order.quantity ? "#{number_with_delimiter(order.quantity)}個" : "-" %></td>
             <td><%= order.order_date&.strftime("%Y/%m/%d") %></td>
             <td>
-              <% if order.shipping_date %>
-                <%= order.shipping_date.strftime("%Y/%m/%d") %>
+              <% if order.estimate_delivery_date %>
+                <%= order.estimate_delivery_date.strftime("%Y/%m/%d") %>
               <% else %>
                 <span class="text-gray-400">未定</span>
               <% end %>
@@ -72,7 +72,7 @@
             <td>
               <% if order.delivery_date && order.delivery_date < Date.current %>
                 <span class="badge badge-success">完了</span>
-              <% elsif order.shipping_date && order.shipping_date <= Date.current %>
+              <% elsif order.estimate_delivery_date && order.estimate_delivery_date <= Date.current %>
                 <span class="badge badge-warning">出荷済み</span>
               <% else %>
                 <span class="badge badge-info">処理中</span>
